# Superset-plugin

./: .gitignore  ARCHITECTURE.md  DEPLOY_DATA_ENTRY_PLUGIN_OTHER_PROJECTS.md  DOCUMENTATION.md  GITHUB_SETUP.md  INSTALL.md  MANIFEST.in  README.md  SETUP_DATA_ENTRY_PLUGIN.md  SETUP_NEW_PROJECT.md  pyproject.toml  requirements.txt  setup.py
migrations/: DE_V7__create_form_fields_table.sql
superset_data_entry/: __init__.py  api.py  dao.py  form_access.py  migrations_runner.py  models.py  rls.py  setup_cli.py  sharepoint.py  table_manager.py  utils.py  validation.py  views.py
superset_data_entry/migrations/: DE_V10__add_sharepoint_config.sql  DE_V11__add_sharepoint_last_uploaded_at.sql  DE_V12__add_sharepoint_upload_log.sql  V6__create_form_configurations_table.sql  V8__add_allowed_role_names_to_form_configurations.sql  V8__add_location_id_to_form_configurations.sql  V9__allow_duplicate_form_names_unique_table_name.sql  __init__.py
superset_data_entry/static/: data_entry.js  data_entry_plugin.css  data_entry_utils.js  data_grid.js  form_builder.js
superset_data_entry/templates/data_entry/: data_entry.html  data_grid.html  error.html  form_builder.html  form_list.html  minimal_base.html
tests/: conftest.py  test_dao.py  test_migrations_runner.py  test_table_manager.py  test_utils.py  test_validation.py
